Removed dbsetup and schema validation from server bootstrap
Former-commit-id: d0adc2323ff6fba7734514451fd65a1a436da018